--- a/Style CSS/General.css
+++ b/Style CSS/General.css
@@ -16,16 +16,31 @@ a:link {
   a:active {
     text-decoration: none;
   }
+::-webkit-scrollbar{
+  width: 16px;
+}
+::-webkit-scrollbar-track{
+  background-color: white;
+}
+::-webkit-scrollbar-thumb{
+  background-color: rgba(0, 0, 0, 0.6);
+  border-width: 4px;
+  border-style: solid;
+  border-color: white;
+  border-radius: 8px; 
+}
+::-webkit-scrollbar-thumb:hover{
+  background: rgba(0, 0, 0, 0.3);
+}
 body{
     margin: 0;
-    padding-top: 90px;
-    padding-left: 103px; 
-    padding-right: 30px;
+    padding-top: 84px;
+    padding-left: 264px; 
+    padding-right: 24px;
     padding-bottom: 40px;
     font-family: Roboto, Arial;
     background-color: rgb(248, 248, 248);
 }
-
 .video-time{
     background-color: black;
     color: white;
@@ -44,4 +59,16 @@ body{
     margin: 4px;
 
     border-radius: 2px;
+}
+hr{
+  border-bottom: 0px;
+  border-color: rgb(0, 0, 0, 0.1);
+  margin: 12px 0px;
+}
+.copyright{
+  padding: 0 24px;
+  line-height: 20px;
+  color: rgb(80, 80, 80);
+  font-size: 13px;
+  font-weight: 500;
 }
