--- a/Style CSS/Header.css
+++ b/Style CSS/Header.css
@@ -154,15 +154,26 @@ input:focus {
     color: white;
 
     position: absolute;
-    top: -1px;
-    right: -3px;
+    top: 7px;
+    right: 4px;
 
     font-size: 10px;
+    padding: 0px 4px;
     font-weight: 500;
 
-    padding-left: 4px;
-    padding-right: 4px;
+    
     border-radius: 100%;
+}
+.NotificationDiv{
+    width: 37px;
+    height: 37px;
+    border: 1px solid white;
+    border-radius: 100%;
+}
+.NotificationDiv:active{
+    background-color: rgb(245, 245, 245);
+    border: 1px solid rgb(200, 200, 200);
+    
 }
 .NotificationDiv:hover .NotificationTooltipDiv{
     opacity: 0.8;
